# discord-archive

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  config.example.json  config.example.toml  docker-compose.yml  pyproject.toml
.claude/skills/recall/: SKILL.md
.github/workflows/: ci.yml
discord_archive/: __main__.py
discord_archive/config/: settings.py
discord_archive/core/: __init__.py
discord_archive/db/: base.py  engine.py
discord_archive/db/models/: __init__.py  attachment.py  channel.py  chunk.py  chunk_text.py  chunking_checkpoint.py  emoji.py  guild.py  guild_scheduled_event.py  ingest_checkpoint.py  message.py  reaction.py  role.py  sticker.py  user.py
discord_archive/db/repositories/: __init__.py  channel_repository.py  chunk_repository.py  chunk_text_repository.py  chunking_checkpoint_repository.py  guild_repository.py  message_repository.py
discord_archive/galaxy/: __main__.py  app.py
discord_archive/ingest/: __init__.py  __main__.py  backfill.py  channel_fetcher.py  client.py  entity_ingestor.py  guild_processor.py  incremental.py  logger.py  run.py  state.py
discord_archive/ingest/mappers/: __init__.py  channel.py  emoji.py  guild.py  message.py  role.py  scheduled_event.py  sticker.py  user.py
discord_archive/rag/chunking/: __init__.py  __main__.py  author_group.py  constants.py  logger.py  processor.py  reply_chain.py  run.py  sliding_window.py  text_builder.py  tokenizer.py
discord_archive/rag/embedding/: __init__.py  __main__.py  (+5 more)
discord_archive/utils/: ids.py  json.py  logger.py  logging.py  permissions.py  pipeline_logger.py  snowflake.py  time.py
tests/: conftest.py  test_backfill.py  test_channel_fetcher.py  test_channel_mapper.py  test_client.py  test_entity_ingestor.py  test_guild_processor.py  test_incremental.py  test_logger.py  test_message_mapper.py  test_message_repository.py  test_other_mappers.py  test_permissions.py  test_pipeline_logger.py  test_run.py  test_scheduled_event_mapper.py  test_state.py  test_utils_ids.py  test_utils_json.py  test_utils_snowflake.py  test_utils_time.py
tests/db/: __init__.py
tests/rag/: __init__.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
(+30 files in other folders)
