[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-archive"
version = "0.1.0"
description = "A Discord archive tool with optional RAG pipeline."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "wdwdev"}
]
dependencies = [
    # Core dependencies
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "asyncpg>=0.29",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
]

[tool.setuptools]
packages = ["discord_archive"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]