[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-archive"
version = "0.1.0"
description = "A Discord archive tool with optional RAG support."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "wdwdev"}
]
dependencies = [
    # Core dependencies
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "asyncpg>=0.29",
    "rich>=13.0",
]

[project.optional-dependencies]
rag = [
    "transformers>=4.42,<4.45",  # NV-Embed-v2 remote code requires this range
    "torch>=2.0",
    "lancedb>=0.5",
    "datasets>=2.0",   # NV-Embed-v2 remote code imports datasets.Dataset
    "einops>=0.7",     # NV-Embed-v2 remote code imports einops
    "mcp>=1.0",
]
galaxy = [
    "discord-archive[rag]",
    "umap-learn>=0.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pylance>=2.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
]

[project.scripts]
discord-archive = "discord_archive.__main__:main"

[tool.setuptools]
packages = ["discord_archive"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
